--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,4 +1,3 @@
-
 name: Hello World!
 
 on:
@@ -8,8 +7,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Say hello
-        run: |
-          echo "Hello World!"
+        run: echo "Hello from GitHub Actions!"
