added the new comment for sample push of cicd

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,10 +1,10 @@
-
+# this workflow is for testing the push happens
 on:
   push:
     branches:
       - main
 
-      
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-latest
