build and test added for pipeline yaml file

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,3 +18,10 @@ jobs:
 
       - name: Check style
         run: npm run eslint
+
+      
+      - name: Build
+        run: npm run build  
+
+      - name: check test
+        run: npm run test  
