--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
       "e2e-tests"
+    ],
+    "roots": [
+      "<rootDir>/test"
     ]
   }
 }
